ws_controller/log/build_2025-08-22_16-30-48/flight_controller_pkg/stderr.log
  File "/home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg/fc_control.py", line 281
    self._TYPE_MASK_USE_YAW_RATE
    ^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

